saedit: Modify Makefile

--- a/saedit/Makefile
+++ b/saedit/Makefile
@@ -3,6 +3,6 @@ IBUS_FLAGS = $(shell pkg-config ibus-1.0 --cflags --libs)
 OUTPUT = saedit
 all:compile clean
 compile:
-	gcc ${CFLAGS} ${GTK_FLAGS} ${IBUS_FLAGS} ${LDFLAGS} main.c -o '${OUTPUT}'
+	gcc -ggdb3 -O2 ${CFLAGS} ${GTK_FLAGS} ${IBUS_FLAGS} ${LDFLAGS} main.c -o '${OUTPUT}'
 clean:
 	rm -rfv *.o~ *.c~ *.h~
