Improve the makefile and add a field for the wiki, now works: - make, - make all, - make wiki, - make about-server.

--- a/contrib_xsl/Makefile
+++ b/contrib_xsl/Makefile
@@ -2,7 +2,13 @@ XSLTPROC = xsltproc
 CDDIR    = ../../client-data
 HELPDIR  = help
 
+all: about-server wiki
+
 about-server:
 	@mkdir -p $(CDDIR)/$(HELPDIR)
-	@$(XSLTPROC) about-server.xsl $(CDDIR)/contributors.xml > $(CDDIR)/$(HELPDIR)/about-server.txt
+	@$(XSLTPROC) -o $(CDDIR)/$(HELPDIR)/about-server.txt about-server.xsl contributors.xml 
 	@echo "The file about-server.txt was created successfully."
+
+wiki:
+	@$(XSLTPROC) wiki.xsl contributors.xml | less
+	@echo "You can now place this output in: http://wiki.evolonline.org/contributors"
