Debian unstable dropped support for Python2.7 Update CI to use Debian Stable.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ pyflakes2:
   script:
   - ./ci/install.sh python2.7 pyflakes
   - pyflakes .
-  image: debian:unstable
+  image: debian:stable
 
 .pyflakes3:
   stage: test
