add a constant for Vault usage

--- a/localserver/conf/constants.conf
+++ b/localserver/conf/constants.conf
@@ -27,4 +27,8 @@
 //= Battle local configuration file.
 //=========================================================================
 
+// set to 0 for production, 1 for development
 debug: 0
+
+// set to 1 if the server uses tmw-vault
+SERVER_USES_VAULT: 0
